# PerchRender

./: .gitignore  LICENSE  README.md  build_ios.sh  build_mac.sh  build_unix.sh  build_win.sh
platform/android/: local.properties
platform/android/app/: build.gradle
platform/android/app/src/main/: AndroidManifest.xml
platform/android/app/src/main/cpp/: CMakeLists.txt  GfxAndroid.cpp
platform/android/app/src/main/java/me/mecg/render/: GL2JNIActivity.java  GL2JNILib.java  GL2JNIView.java
platform/android/app/src/main/res/values/: strings.xml
platform/android/gradle/wrapper/: gradle-wrapper.properties
platform/ios/Render/: AppDelegate.h  AppDelegate.m  Info.plist  ViewController.h  ViewController.m  kGLView.h  kGLView.m  main.m
platform/ios/Render/Render/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  ViewController.h  ViewController.m  kGLView.m  main.m
platform/ios/Render/Render.xcodeproj/: project.pbxproj
platform/ios/Render/Render.xcodeproj/project.xcworkspace/xcuserdata/yanfeiliu.xcuserdatad/: UserInterfaceState.xcuserstate
platform/ios/render.xcodeproj/: project.pbxproj
platform/ios/render.xcodeproj/project.xcworkspace/xcuserdata/toy.xcuserdatad/: UserInterfaceState.xcuserstate
platform/ios/render.xcodeproj/xcuserdata/toy.xcuserdatad/xcschemes/: xcschememanagement.plist
platform/ios/staticlib/: CMakeLists.txt  GfxIOS.h  GfxIOS.mm  main.cpp
platform/win/: CMakeLists.txt  main.cpp
platformDependent/android/: gl.h  log.h
platformDependent/ios/: gl.h
platformDependent/win/: gl.h  log.h
runtime/core/: Context.cpp  Context.h  Engine.cpp  Engine.h  Perch.cpp  Perch.h  core.cpp  core.h
runtime/gfx/: GfxClient.cpp  GfxClient.h  GfxServer.cpp  GfxServer.h  gfx.cpp  gfx.h
runtime/input/: KeyCodes.h
runtime/math/: MathFunctions.cpp  MathFunctions.h
runtime/threads/: Semaphore.h  StreamRingBuffer.cpp  StreamRingBuffer.h
runtime/utils/: Instance.h  NonCopyable.h  Semaphore.h  Types.h
